--- a/LanguageSchool/Views/Shared/_Layout.cshtml
+++ b/LanguageSchool/Views/Shared/_Layout.cshtml
@@ -53,6 +53,9 @@
 
             <div class="alert" style="background-color: @alert.AlertType; color: white; text-align: center;">
                 <strong>@alert.Title</strong>: @alert.Message
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
         }
 
