--- a/LanguageSchool/Views/Group/FullDetails.cshtml
+++ b/LanguageSchool/Views/Group/FullDetails.cshtml
@@ -56,7 +56,7 @@
     <div class="row col-md-12">
         <div class="col-md-4 col-md-offset-8">
             <div class="col-md-6">
-                <button class="btn btn-block btn-default" type="button" onclick="location.href='@Url.Action("Edit", "Group")'">Edytuj</button>
+                <button class="btn btn-block btn-default" type="button" onclick="location.href='@Url.Action("Edit", "Group", new { id = Model.GroupId })'">Edytuj</button>
             </div>
             <div class="col-md-6">
                 <button class="btn btn-block btn-danger" type="button" data-toggle="modal" data-target="#deleteDialog">Usuń</button>
