--- a/LanguageSchool/Views/Course/FullDetails.cshtml
+++ b/LanguageSchool/Views/Course/FullDetails.cshtml
@@ -1,6 +1,6 @@
 ﻿@using LanguageSchool.Models.ViewModels
 
-@model LanguageSchool.Models.Course
+@model LanguageSchool.Models.ViewModels.CourseViewModels.CourseDetailsVM
 
 @{
     ViewBag.Title = "Kurs";
@@ -23,7 +23,7 @@
                     <strong>Poziom</strong>
                 </div>
                 <div class="col-md-4">
-                    @Html.DisplayFor(model => model.LanguageProficency.PLName)
+                    @Html.DisplayFor(model => model.LanguageProficency)
                 </div>
             </div>
 
@@ -54,14 +54,14 @@
                     <strong>Data rozpoczęcia</strong>
                 </div>
                 <div class="col-md-4">
-                    @Model.StartDate.ToString("yyyy/MM/dd")
+                    @Model.StartDate
                 </div>
 
                 <div class="control-label col-md-2">
                     <strong>Data zakończenia</strong>
                 </div>
                 <div class="col-md-4">
-                    @Model.EndDate.ToString("yyyy/MM/dd")
+                    @Model.EndDate
                 </div>
             </div>
 
@@ -77,7 +77,6 @@
             </div>
         </div>
     </div>
-
     <div class="row col-md-12">
         <div class="col-md-6">
         </div>
@@ -94,19 +93,19 @@
                         activateButtonValue = "Dezaktywuj";
                     }
                 }
-                <button class="btn btn-block btn-default" type="button" onclick="location.href='@Url.Action("DeActivate", "Course", new { id = Model.Id })'">@activateButtonValue</button>
+                <button class="btn btn-block btn-default" type="button" onclick="location.href='@Url.Action("DeActivate", "Course", new { id = Model.CourseId })'">@activateButtonValue</button>
             </div>
             <div class="col-md-3">
                 <button class="btn btn-block btn-danger" type="button" data-toggle="modal" data-target="#deleteDialog">Usuń</button>
             </div>
             <div class="col-md-3">
-                <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Create", "Group")'">Dodaj grupę</button>
+                <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Create", "Group", new { id = Model.CourseId }))'">Dodaj grupę</button>
             </div>
         </div>
     </div>
     @if (Model.Groups.Any())
     {
-        Html.RenderPartial("_PartHeader", "Grupy przypisane do kursu");
+        Html.Partial("_PartHeader", "Grupy przypisane do kursu");
         <div class="row">
             <div class="bordered col-md-12">
                 <table class="table table-striped table-bordered">
@@ -121,18 +120,17 @@
                             Prowadzący
                         </th>
                     </tr>
-                    @foreach (var group in Model.Groups.Where(g => !g.IsDeleted))
+                    @foreach (var group in Model.Groups)
                     {
-                        var teacher = group.UsersGroups.Where(ug => !ug.IsDeleted && ug.User.RoleId == (int)Consts.Roles.Teacher).FirstOrDefault().User;
                         <tr>
                             <td>
-                                @group.CreationDate.ToString("yyyy/MM/dd")
+                                @group.CreationDate
                             </td>
                             <td>
-                                @Html.ActionLink(group.Name, "FullDetails", "Group", new { id = group.Id }, null)
+                                @Html.ActionLink(group.Name, "FullDetails", "Group", new { id = group.GroupId }, null)
                             </td>
                             <td>
-                                @teacher.UserData.Name @teacher.UserData.Surname (@teacher.Login) @*TODO*@
+                                @group.Teacher.FullName
                             </td>
                         </tr>
                     }
@@ -144,7 +142,7 @@
 
 @Html.Partial("_DeleteDialog",
     new DeleteDialogViewModel (
-        Model.Id,
+        Model.CourseId,
         "Course",
         "Czy na pewno chcesz usunąć ten kurs? Spowoduje to usunięcie wszystkich jego grup oraz przypisanych do nich treści. Jego uczestnicy utracą do niego dostęp."
     )
