--- a/LanguageSchool/Views/Group/Details.cshtml
+++ b/LanguageSchool/Views/Group/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿@using System.Linq;
-@model LanguageSchool.Models.ViewModels.GroupViewModel
+@model LanguageSchool.Models.ViewModels.GroupViewModels.TeacherGroupVM
 
 @{
     ViewBag.Title = "Index";
