Ostateczne zmiany dla VM w creqs

--- a/LanguageSchool/Views/ContactRequest/Create.cshtml
+++ b/LanguageSchool/Views/ContactRequest/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model LanguageSchool.Models.ViewModels.ContactRequestViewModel
+﻿@model LanguageSchool.Models.ViewModels.ContactRequestViewModels.ContactRequestInputVM
 
 @{
     ViewBag.Title = "Prośba o kontakt";
@@ -39,8 +39,9 @@
                 <div class="control-label col-md-2">
                     <strong>Godziny kontaktu od</strong>
                 </div>
-                <div class="col-md-1">
-                    @Html.EditorFor(model => model.PreferredHoursFrom, new { htmlAttributes = new { @class = "form-control" } })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.PreferredHoursFrom, new { htmlAttributes = new { @class = "form-control", @style = "width:70px" } })
+                    @Html.ValidationMessageFor(model => model.PreferredHoursFrom, "", new { @class = "text-danger" })
                 </div>
             </div>
 
@@ -48,8 +49,9 @@
                 <div class="control-label col-md-2">
                     <strong>Godziny kontaktu do</strong>
                 </div>
-                <div class="col-md-1">
-                    @Html.EditorFor(model => model.PreferredHoursTo, new { htmlAttributes = new { @class = "form-control" } })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.PreferredHoursTo, new { htmlAttributes = new { @class = "form-control", @style = "width:70px" } })
+                    @Html.ValidationMessageFor(model => model.PreferredHoursTo, "", new { @class = "text-danger" })
                 </div>
             </div>
 
