--- a/LanguageSchool/Views/UserData/List.cshtml
+++ b/LanguageSchool/Views/UserData/List.cshtml
@@ -190,6 +190,8 @@
                     <th>
                         Adres email
                     </th>
+                    <th style="width:30px">
+                    </th>
                 </tr>
                 @foreach (var item in Model)
                 {
