--- a/LanguageSchool/Views/Message/Send.cshtml
+++ b/LanguageSchool/Views/Message/Send.cshtml
@@ -1,4 +1,4 @@
-﻿@model LanguageSchool.Models.ViewModels.UserMessageViewModel
+﻿@model LanguageSchool.Models.ViewModels.MessageViewModels.MessageInputVM
 
 @{
     ViewBag.Title = "Create";
