--- a/LanguageSchool/Views/Message/SendToUser.cshtml
+++ b/LanguageSchool/Views/Message/SendToUser.cshtml
@@ -1,4 +1,4 @@
-﻿@model LanguageSchool.Models.ViewModels.SendMessageViewModels.SendToUserVM
+﻿@model LanguageSchool.Models.ViewModels.MessageViewModels.SendToUserInputVM
 
 @{
     ViewBag.Title = "Create";
